메인 Recycler item 모양 완성 / sarabun 폰트 추가 / RouteAdapter 에 클릭 동작 추가 하는 중

--- a/app/src/main/res/layout/fragment_intro_child.xml
+++ b/app/src/main/res/layout/fragment_intro_child.xml
@@ -27,8 +27,7 @@
                 android:textColor="#423f3f"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:text="@string/tv_intro_page3"
-                android:layout_alignLeft="@+id/iv_intro_page" />
+                android:text="@string/tv_intro_page3" />
 
             <ImageView
                 android:id="@+id/iv_intro_page"
