폰트 또 추가/ 메인 리사이클러 완성 및 아이템 일부 속성 변경

--- a/app/src/main/res/layout/item_new_route.xml
+++ b/app/src/main/res/layout/item_new_route.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="136dp">
+    android:layout_height="136dp"
+    android:background="?attr/selectableItemBackgroundBorderless">
 
-    <Button
-        android:id="@+id/bt_new_route"
-        style="@style/Widget.AppCompat.Button.Borderless"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="104dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="18dp"
         android:background="@drawable/outline_gray"
-        android:paddingTop="55dp"
-        android:text="노선 생성하기"
         android:textColor=" #757f8c"
-        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/iv_route_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:paddingTop="26dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/bt_new_route"
-        app:srcCompat="@drawable/img_route_plus" />
+        <TextView
+            android:id="@+id/tv_route_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:fontFamily="@font/sarabun_medium"
+
+            android:text="노선 생성하기"
+            android:textColor=" #757f8c"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_route_plus" />
+
+        <ImageView
+            android:id="@+id/iv_route_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/img_route_plus" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
