--- a/app/src/main/res/layout/fragment_agree__terms.xml
+++ b/app/src/main/res/layout/fragment_agree__terms.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="AgreeTermsfrag"
+            type="com.thustop_00.Agree_TermsFragment" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,11 +53,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox"
-            android:text="@string/cb_agree_all"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/iv_agree"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
-            app:layout_constraintBottom_toTopOf="@id/cb_agree1"/>
+            app:layout_constraintBottom_toTopOf="@id/cb_agree1"
+            app:layout_constraintVertical_chainStyle="packed"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree_all"
+            android:textColor="#202020"
+            android:textSize="14sp"
+
+            app:layout_constraintStart_toEndOf="@id/cb_agree_all"
+            app:layout_constraintTop_toTopOf="@id/cb_agree_all"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree_all"/>
+
 
         <CheckBox
             android:id="@+id/cb_agree1"
@@ -60,11 +78,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox_2"
-            android:text="@string/cb_agree1"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree_all"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
             app:layout_constraintBottom_toTopOf="@id/cb_agree2"/>
+
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree1"
+            android:textColor="#4b4b4b"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/cb_agree1"
+            app:layout_constraintTop_toTopOf="@id/cb_agree1"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree1"/>
 
         <CheckBox
             android:id="@+id/cb_agree2"
@@ -72,11 +101,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox_2"
-            android:text="@string/cb_agree2"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree1"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
             app:layout_constraintBottom_toTopOf="@id/cb_agree3"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree2"
+            android:textColor="#4b4b4b"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/cb_agree2"
+            app:layout_constraintTop_toTopOf="@id/cb_agree2"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree2"/>
 
         <CheckBox
             android:id="@+id/cb_agree3"
@@ -84,11 +123,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox_2"
-            android:text="@string/cb_agree3"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree2"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
             app:layout_constraintBottom_toTopOf="@id/cb_agree4"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree3"
+            android:textColor="#4b4b4b"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/cb_agree3"
+            app:layout_constraintTop_toTopOf="@id/cb_agree3"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree3"/>
 
         <CheckBox
             android:id="@+id/cb_agree4"
@@ -96,11 +145,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox_2"
-            android:text="@string/cb_agree4"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree3"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
             app:layout_constraintBottom_toTopOf="@id/cb_agree5"/>
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree4"
+            android:textColor="#4b4b4b"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/cb_agree4"
+            app:layout_constraintTop_toTopOf="@id/cb_agree4"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree4"/>
 
         <CheckBox
             android:id="@+id/cb_agree5"
@@ -108,11 +166,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox_2"
-            android:text="@string/cb_agree5"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree4"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
             app:layout_constraintBottom_toTopOf="@id/cb_agree6"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree5"
+            android:textColor="#4b4b4b"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/cb_agree5"
+            app:layout_constraintTop_toTopOf="@id/cb_agree5"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree5"/>
 
         <CheckBox
             android:id="@+id/cb_agree6"
@@ -120,25 +188,38 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:button="@drawable/custom_checkbox_2"
-            android:text="@string/cb_agree6"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_agree"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_agree6"
+            android:textColor="#4b4b4b"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/cb_agree6"
+            app:layout_constraintTop_toTopOf="@id/cb_agree6"
+            app:layout_constraintBottom_toBottomOf="@id/cb_agree6"/>
 
         <com.thustop_00.widgets.NotoButton
             android:id="@+id/bt_agree"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:background="@drawable/button_round_green"
+            android:background="@drawable/button_round_c4"
             android:text="@string/bt_agree"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             app:notoTextStyle="bold"
+            android:onClick="@{AgreeTermsfrag::onAgreeClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/iv_agree"
             app:layout_constraintStart_toStartOf="@id/iv_agree" />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
