노선 추가 뜯어 고침(MapSearch <-> Search간 데이터 교환, Back Button 액션, 변수 정리, ), Back button listener 추가, hideKeyBoard Method 추가 등등

--- a/app/src/main/res/layout/item_location_search.xml
+++ b/app/src/main/res/layout/item_location_search.xml
@@ -11,13 +11,13 @@
         android:id="@+id/tv_pred_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="30dp"
-        android:paddingStart="5dp"
-        android:textColor="#898a8d"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="36dp"
+        android:textColor=" #535353"
         android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@id/bt_choice"
+        app:notoTextStyle="regular"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="선릉역 1번출구" />
@@ -27,9 +27,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:paddingStart="5dp"
         android:textColor="#898a8d"
-        android:textSize="14sp"
+        android:textSize="9sp"
+        app:notoTextStyle="regular"
         app:layout_constraintEnd_toEndOf="@id/tv_pred_name"
         app:layout_constraintStart_toStartOf="@id/tv_pred_name"
         app:layout_constraintTop_toBottomOf="@id/tv_pred_name"
@@ -43,17 +43,5 @@
         app:layout_constraintEnd_toEndOf="@id/tv_pred_name"
         app:layout_constraintStart_toStartOf="@id/tv_pred_name"
         app:layout_constraintTop_toBottomOf="@id/tv_pred_address" />
-
-    <com.thustop_00.widgets.NotoButton
-        android:id="@+id/bt_choice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:text="선택"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@id/tv_pred_address"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
