--- a/app/src/main/res/layout/fragment_location_search.xml
+++ b/app/src/main/res/layout/fragment_location_search.xml
@@ -21,6 +21,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
+            android:singleLine="true"
             style="@style/EtStyle"
             android:paddingStart="55dp"
             android:background="@drawable/outline_green"
@@ -47,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             style="@style/EtStyle"
+            android:singleLine="true"
             android:text=""
             android:paddingStart="55dp"
             android:maxLines="1"
@@ -76,6 +78,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_end"
             tools:listitem="@layout/item_location_search" />
+        <com.thustop_00.widgets.NotoEditText
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/et_dummy"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
