--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -103,7 +103,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#65000000"
-            android:elevation="2dp"/>
+            android:clickable="true"
+            android:elevation="2dp"
+            android:focusable="auto"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_local"
