--- a/app/src/main/res/layout/fragment_agree__terms.xml
+++ b/app/src/main/res/layout/fragment_agree__terms.xml
@@ -24,14 +24,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/tv_agree"
-            android:textColor="@android:color/black"
-            android:textSize="21sp"
+            android:textColor="#202020"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/iv_agree"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/guideline1"
-            app:layout_constraintVertical_bias="0.19999999"
+            app:layout_constraintVertical_bias="0.110000014"
             app:layout_constraintVertical_chainStyle="packed"
             app:notoTextStyle="bold" />
 
@@ -51,7 +51,7 @@
             android:id="@+id/cb_agree_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:button="@drawable/custom_checkbox"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/iv_agree"
